<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/woodbackground"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <usagitoneko.nekof.Widget.passwordView.PwdInputView
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_above="@+id/showPwSwitch"
        android:layout_centerHorizontal="true"
        android:cursorVisible="false"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="enter your password"
        android:inputType="number"
        android:lines="1"
        android:maxLength="4"/>


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/submitPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/showPwSwitch"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="0dp"
        fancy:fb_defaultColor="#795548"
        fancy:fb_focusColor="#5D4037"
        fancy:fb_fontIconResource="&#xf04b;"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="30dp"
        fancy:fb_text="Connect"
        fancy:fb_textColor="#FFFFFF" />

    <Switch
        android:id="@+id/showPwSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="9dp"
        android:text="Show Password"/>

    <TextView
        android:id="@+id/testForIntent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp" />
</RelativeLayout>