...
        android:textSize="23dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uTurnButton"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/appbar"
        android:layout_width="14dp"
        android:layout_height="wrap_content"
...
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="0dp" />



    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/forceStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
...
